--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,25 @@
-const BlogPost = () => {
-    return (
-      <div className="blog-post">
-        <h1>Building an API with Node.js and Express</h1>
-        <p>
-          APIs are crucial for modern web applications. In this article, we’ll walk through how to build a simple API using Node.js and Express...
-        </p>
-  
-        <img src="/images/api-diagram.png" alt="API Diagram" className="article-image" />
-  
-        <p>
-          First, we set up our Node.js project and install the required dependencies...
-        </p>
-      </div>
-    );
-  };
-  
-  export default BlogPost;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Blog</title>
+    <link rel="stylesheet" href="/styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Blog</h1>
+    </header>
+    <main id="content">
+        <h2>Latest Posts</h2>
+        <div id="posts"></div>
+    </main>
+    <footer>
+        <p>&copy; 2024 My Blog</p>
+    </footer>
+    <script src="/main.js"></script>
+</body>
+</html>
+
   
