--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Blog</title>
+    <title>CDSpurlock blogs</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    <nav>
+        <a href="/">Home</a>
+        <a href="../posts/blog-post.html">Blogs</a>
+    </nav>
     <header>
         <h1>Welcome to My Blog</h1>
     </header>
